<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sensors"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textSize="10sp" />

	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<CheckBox
			android:id="@+id/checkBox6"
			android:layout_width="65dp"
			android:layout_height="34dp"
			android:text="@string/lint" />

		<CheckBox
			android:id="@+id/checkBox1"
			android:layout_width="wrap_content"
			android:layout_height="34dp"
			android:layout_gravity="fill"
			android:clickable="false"
			android:text="@string/b0" />

		<CheckBox
			android:id="@+id/checkBox2"
			android:layout_width="wrap_content"
			android:layout_height="34dp"
			android:layout_gravity="fill"
			android:clickable="false"
			android:text="@string/b1" />

		<CheckBox
			android:id="@+id/checkBox3"
			android:layout_width="wrap_content"
			android:layout_height="34dp"
			android:layout_gravity="fill"
			android:clickable="false"
			android:text="@string/b2" />

		<CheckBox
			android:id="@+id/checkBox4"
			android:layout_width="wrap_content"
			android:layout_height="34dp"
			android:layout_gravity="fill"
			android:clickable="false"
			android:text="@string/b3" />

		<CheckBox
			android:id="@+id/checkBox5"
			android:layout_width="wrap_content"
			android:layout_height="34dp"
			android:layout_gravity="fill"
			android:clickable="false"
			android:text="@string/b4" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout01"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView01"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="0,0V"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ProgressBar
			android:id="@+id/ProgressBar01"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:max="100" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout02"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView02"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="000cm"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ProgressBar
			android:id="@+id/ProgressBar02"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:max="255" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout03"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView03"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="000cm"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ProgressBar
			android:id="@+id/ProgressBar03"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:max="255" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout04"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView04"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="000cm"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ProgressBar
			android:id="@+id/ProgressBar04"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:max="255" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout05"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView05"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="000cm"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ProgressBar
			android:id="@+id/ProgressBar05"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:max="255" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout06"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView06"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="000cm"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ProgressBar
			android:id="@+id/ProgressBar06"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:max="255" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout07"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView07"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="000cm"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<ProgressBar
			android:id="@+id/ProgressBar07"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:max="255" />

	</LinearLayout>

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/motor"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textSize="10sp" />

	<LinearLayout
		android:id="@+id/LinearLayout08"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView08"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="00/00"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/seekBar1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:layout_weight="1"
			android:max="160"
			android:progress="80"
			android:secondaryProgress="80" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout09"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/TextView09"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="00/00"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/SeekBar01"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:layout_weight="1"
			android:max="160"
			android:progress="80"
			android:secondaryProgress="80" />

	</LinearLayout>

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/optional"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textSize="10sp" />

	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false" >

		<TextView
			android:id="@+id/textView5"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="@string/red"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/seekBar2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:layout_weight="1"
			android:max="63" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayout3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/textView6"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:text="@string/blue"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<SeekBar
			android:id="@+id/seekBar3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:layout_weight="1"
			android:max="63" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayout5"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<LinearLayout
			android:id="@+id/linearLayout6"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/textView13"
				android:layout_width="65dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:text="@string/band"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>

		<SeekBar
			android:id="@+id/seekBar4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:layout_weight="1"
			android:max="100" />

	</LinearLayout>

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/position"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textSize="10sp" />

	<LinearLayout
		android:id="@+id/linearLayout4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
			android:id="@+id/textView8"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:layout_weight="1"
			android:text="0"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/textView9"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:layout_weight="1"
			android:text="0"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/textView10"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:layout_weight="1"
			android:text="0°"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

	<TextView
		android:id="@+id/textView11"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/debug"
		android:textSize="10sp" />

	<TextView
		android:id="@+id/textView12"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="Dbg Text"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textSize="10sp" />

</LinearLayout>